// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should be okay without front-matter or data 1`] = `
Object {
  "content": "<!DOCTYPE html>
<html lang=\\"en\\">
  <head>
    <meta charset=\\"UTF-8\\" />
    <meta http-equiv=\\"X-UA-Compatible\\" content=\\"IE=edge\\" />
    <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1.0\\" />
    <title>Document</title>
  </head>
  <body></body>
</html>
",
  "data": Object {
    "age": "349",
    "name": "Alex",
    "page": Object {},
  },
  "haveAttributes": 0,
  "source": "tests/fixtures/no-frontmatter.html",
}
`;

exports[`should parse html with data 1`] = `
Object {
  "content": "<h1 id=\\"lorem-ipsum\\">Lorem ipsum</h1>
<p>dolor sit amet consectetur adipisicing elit. Doloribus, quam. Dicta amet</p>
<p>omnis <strong>accusamus</strong> doloribus sequi laboriosam quaerat</p>
<blockquote>
  <p>inventore enim alias sunt officia nostrum debitis ab</p>
</blockquote>
<pre><code class=\\"language-bash\\">asperiores est, quo libero?
</code></pre>
",
  "data": Object {
    "age": "349",
    "name": "Alex",
    "page": Object {
      "layout": "special.njk",
    },
  },
  "haveAttributes": 1,
  "source": "tests/fixtures/prose.html",
}
`;

exports[`should parse markdown with data 1`] = `
Object {
  "content": "<h1 id=\\"lorem-ipsum\\">Lorem ipsum</h1>
<p>dolor sit amet consectetur adipisicing elit. Doloribus, quam. Dicta amet</p>
<p>omnis <strong>accusamus</strong> doloribus sequi laboriosam quaerat</p>
<blockquote>
<p>inventore enim alias sunt officia nostrum debitis ab</p>
</blockquote>
<pre><code class=\\"language-bash\\">asperiores est, quo libero?
</code></pre>
",
  "data": Object {
    "age": "349",
    "name": "Alex",
    "page": Object {
      "layout": "default",
    },
  },
  "haveAttributes": 1,
  "source": "tests/fixtures/prose.md",
}
`;
